[package]
name = "logitech-lcd"
version = "1.0.1"
authors = ["Henning Ottesen <henning@live.no>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/henninglive/logitech-lcd"
homepage = "https://github.com/henninglive/logitech-lcd"
documentation = "https://docs.rs/crate/logitech-lcd/1.0.1"
description = "Rust bindings for the Logitech Gaming LCD/Gamepanel SDK."
exclude = [
    "examples/color-hello-world.png",
    "examples/color-image.png",
    "examples/mono-hello-world.png",
    "examples/mono-image.png"
]

# Should be [target.'cfg(windows)'.dependencies], but that doesn't work for some reason.
# Needs to be fixed if we want to add support for 3d party drivers on Linux or OSX.
[dependencies]
logitech-lcd-sys = {path = "logitech-lcd-sys", version = "1.0.4"}

[dev-dependencies]
image = "0.13.0"
