[package]
name = "logitech-lcd-sys"
version = "1.0.4"
authors = ["Henning Ottesen <henning@live.no>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/henninglive/logitech-lcd/tree/master/logitech-lcd-sys"
homepage = "https://github.com/henninglive/logitech-lcd/tree/master/logitech-lcd-sys"
documentation = "https://docs.rs/logitech-lcd-sys/"
description = "FFI bindings and loader for the Logitech LCD SDK."

[dependencies]
enumflags = "0.1.2"
enumflags_derive = "0.2.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.2"
winreg = "0.4"
